docs: fix names templates

--- a/latest/01-templates/02-00-configuration.html
+++ b/latest/01-templates/02-00-configuration.html
@@ -173,7 +173,7 @@ structure: nested
 extension: md
 names:
   book: &quot;{{ book.author }} - {{ book.title }}&quot;
-  annotation: &quot;{{ annotation.metadata.slugs.created }}-{{ book.slugs.title }}&quot;
+  annotation: &quot;{{ annotation.slugs.metadata.created }}-{{ book.slugs.title }}&quot;
   directory: &quot;{{ book.author }} - {{ book.title }}&quot;
 --&gt;
 
