--- a/latest/01-templates/06-03-names.html
+++ b/latest/01-templates/06-03-names.html
@@ -180,7 +180,7 @@ example usage.</p>
 <p>With the following <code>names</code> configuration:</p>
 <pre><code class="language-yaml">names:
   book: &quot;{{ book.author }} - {{ book.title }}&quot;
-  annotation: &quot;{{ annotation.metadata.slugs.created }}-{{ book.slugs.title }}&quot;
+  annotation: &quot;{{ annotation.slugs.metadata.created }}-{{ book.slugs.title }}&quot;
   directory: &quot;{{ book.author }} - {{ book.title }}&quot;
 </code></pre>
 <pre><code class="language-json">{
