--- a/latest/print.html
+++ b/latest/print.html
@@ -857,7 +857,7 @@ structure: nested
 extension: md
 names:
   book: &quot;{{ book.author }} - {{ book.title }}&quot;
-  annotation: &quot;{{ annotation.metadata.slugs.created }}-{{ book.slugs.title }}&quot;
+  annotation: &quot;{{ annotation.slugs.metadata.created }}-{{ book.slugs.title }}&quot;
   directory: &quot;{{ book.author }} - {{ book.title }}&quot;
 --&gt;
 
@@ -1269,7 +1269,7 @@ context: book # &lt;- Here!
 extension: md
 names:
   book: &quot;{{ book.author }} - {{ book.title }}&quot;
-  annotation: &quot;{{ annotation.metadata.slugs.created }}-{{ book.slugs.title }}&quot;
+  annotation: &quot;{{ annotation.slugs.metadata.created }}-{{ book.slugs.title }}&quot;
 </code></pre>
 <p>ReadStor will generate a single file for each book and name them using the
 rendered result of <code>names.book</code>. The resulting output would be:</p>
@@ -1286,7 +1286,7 @@ context: annotation # &lt;- Here!
 extension: md
 names:
   book: &quot;{{ book.author }} - {{ book.title }}&quot;
-  annotation: &quot;{{ annotation.metadata.slugs.created }}-{{ book.slugs.title }}&quot;
+  annotation: &quot;{{ annotation.slugs.metadata.created }}-{{ book.slugs.title }}&quot;
 </code></pre>
 <p>ReadStor will now generate a single file for each annotation in each book
 and name them using the rendered result of <code>names.annotation</code>. The resulting
@@ -1326,7 +1326,7 @@ context when its rendered.</p>
 <tr><td>Type</td><td>string</td></tr>
 <tr><td>Valid Values</td><td>any</td></tr>
 <tr><td>Required</td><td>No</td></tr>
-<tr><td>Default</td><td><code>{{ annotation.metadata.slugs.created }}-{{ book.slugs.title }}</code></td></tr>
+<tr><td>Default</td><td><code>{{ annotation.slugs.metadata.created }}-{{ book.slugs.title }}</code></td></tr>
 </tbody></table>
 </div>
 <h2 id="directory-names"><a class="header" href="#directory-names">Directory Names</a></h2>
@@ -1450,7 +1450,7 @@ structure: nested-grouped
 extension: md
 names:
   book: &quot;{{ book.author }} - {{ book.title }}&quot;
-  annotation: &quot;{{ annotation.metadata.slugs.created }}-{{ book.slugs.title }}&quot;
+  annotation: &quot;{{ annotation.slugs.metadata.created }}-{{ book.slugs.title }}&quot;
   directory: &quot;{{ book.author }} - {{ book.title }}&quot;
 </code></pre>
 <h3 id="annotation-template-configuration"><a class="header" href="#annotation-template-configuration">Annotation Template Configuration</a></h3>
@@ -1460,7 +1460,7 @@ structure: nested-grouped
 extension: md
 names:
   book: &quot;{{ book.author }} - {{ book.title }}&quot;
-  annotation: &quot;{{ annotation.metadata.slugs.created }}-{{ book.slugs.title }}&quot;
+  annotation: &quot;{{ annotation.slugs.metadata.created }}-{{ book.slugs.title }}&quot;
   directory: &quot;{{ book.author }} - {{ book.title }}&quot;
 </code></pre>
 <h2 id="template-body"><a class="header" href="#template-body">Template Body</a></h2>
@@ -1734,7 +1734,7 @@ example usage.</p>
 <p>With the following <code>names</code> configuration:</p>
 <pre><code class="language-yaml">names:
   book: &quot;{{ book.author }} - {{ book.title }}&quot;
-  annotation: &quot;{{ annotation.metadata.slugs.created }}-{{ book.slugs.title }}&quot;
+  annotation: &quot;{{ annotation.slugs.metadata.created }}-{{ book.slugs.title }}&quot;
   directory: &quot;{{ book.author }} - {{ book.title }}&quot;
 </code></pre>
 <pre><code class="language-json">{
