--- a/dev/00-intro/02-00-options.html
+++ b/dev/00-intro/02-00-options.html
@@ -33,6 +33,7 @@
 
     </head>
     <body>
+    <div id="body-container">
         <!-- Provide site root to javascript -->
         <script>
             var path_to_root = "../";
@@ -231,5 +232,6 @@ each pipeline has its own set of applicable options.</p>
         <!-- Custom JS scripts -->
 
 
+    </div>
     </body>
 </html>
