--- a/dev/00-intro/02-01-global.html
+++ b/dev/00-intro/02-01-global.html
@@ -33,6 +33,7 @@
 
     </head>
     <body>
+    <div id="body-container">
         <!-- Provide site root to javascript -->
         <script>
             var path_to_root = "../";
@@ -222,5 +223,6 @@ creates is identical to the required databases directory structure.</p>
         <!-- Custom JS scripts -->
 
 
+    </div>
     </body>
 </html>
