--- a/dev/00-intro/02-02-render.html
+++ b/dev/00-intro/02-02-render.html
@@ -33,6 +33,7 @@
 
     </head>
     <body>
+    <div id="body-container">
         <!-- Provide site root to javascript -->
         <script>
             var path_to_root = "../";
@@ -164,7 +165,7 @@
 </blockquote>
 <p>Multiple <a href="../01-templates/02-01-template-groups.html">Template Groups</a> can be passed using the following
 syntax.</p>
-<pre><code class="language-sh">readstor \
+<pre><code class="language-shell">readstor \
     # ...
     --template-group basic
     --template-group using-backlinks
@@ -219,5 +220,6 @@ syntax.</p>
         <!-- Custom JS scripts -->
 
 
+    </div>
     </body>
 </html>
