--- a/dev/00-intro/02-04-backup.html
+++ b/dev/00-intro/02-04-backup.html
@@ -33,6 +33,7 @@
 
     </head>
     <body>
+    <div id="body-container">
         <!-- Provide site root to javascript -->
         <script>
             var path_to_root = "../";
@@ -217,5 +218,6 @@ default value does not contain a backslash.</p>
         <!-- Custom JS scripts -->
 
 
+    </div>
     </body>
 </html>
