--- a/dev/00-intro/02-06-preprocess.html
+++ b/dev/00-intro/02-06-preprocess.html
@@ -33,6 +33,7 @@
 
     </head>
     <body>
+    <div id="body-container">
         <!-- Provide site root to javascript -->
         <script>
             var path_to_root = "../";
@@ -238,5 +239,6 @@ and <a href="../01-templates/06-02-annotation.html"><code>annotation.body</code>
         <!-- Custom JS scripts -->
 
 
+    </div>
     </body>
 </html>
