--- a/dev/01-templates/02-00-configuration.html
+++ b/dev/01-templates/02-00-configuration.html
@@ -33,6 +33,7 @@
 
     </head>
     <body>
+    <div id="body-container">
         <!-- Provide site root to javascript -->
         <script>
             var path_to_root = "../";
@@ -242,5 +243,6 @@ without affecting final rendered output.</p>
         <!-- Custom JS scripts -->
 
 
+    </div>
     </body>
 </html>
