--- a/dev/01-templates/02-04-file-extensions.html
+++ b/dev/01-templates/02-04-file-extensions.html
@@ -33,6 +33,7 @@
 
     </head>
     <body>
+    <div id="body-container">
         <!-- Provide site root to javascript -->
         <script>
             var path_to_root = "../";
@@ -208,5 +209,6 @@ all the output filenames with the format <code>[filename].[extension]</code>.</p
         <!-- Custom JS scripts -->
 
 
+    </div>
     </body>
 </html>
