--- a/dev/01-templates/06-00-context-reference.html
+++ b/dev/01-templates/06-00-context-reference.html
@@ -33,6 +33,7 @@
 
     </head>
     <body>
+    <div id="body-container">
         <!-- Provide site root to javascript -->
         <script>
             var path_to_root = "../";
@@ -208,5 +209,6 @@ context: <code>book</code>, <code>annotation</code> (or <code>annotations</code>
         <!-- Custom JS scripts -->
 
 
+    </div>
     </body>
 </html>
