--- a/dev/01-templates/00-templates.html
+++ b/dev/01-templates/00-templates.html
@@ -33,6 +33,7 @@
 
     </head>
     <body>
+    <div id="body-container">
         <!-- Provide site root to javascript -->
         <script>
             var path_to_root = "../";
@@ -206,5 +207,6 @@ for fully working examples.</p>
         <!-- Custom JS scripts -->
 
 
+    </div>
     </body>
 </html>
