--- a/dev/01-templates/01-an-example-template.html
+++ b/dev/01-templates/01-an-example-template.html
@@ -33,6 +33,7 @@
 
     </head>
     <body>
+    <div id="body-container">
         <!-- Provide site root to javascript -->
         <script>
             var path_to_root = "../";
@@ -401,5 +402,6 @@ tags: #inspiration
         <!-- Custom JS scripts -->
 
 
+    </div>
     </body>
 </html>
