--- a/dev/01-templates/02-01-template-groups.html
+++ b/dev/01-templates/02-01-template-groups.html
@@ -33,6 +33,7 @@
 
     </head>
     <body>
+    <div id="body-container">
         <!-- Provide site root to javascript -->
         <script>
             var path_to_root = "../";
@@ -272,5 +273,6 @@ structure: nested-grouped
         <!-- Custom JS scripts -->
 
 
+    </div>
     </body>
 </html>
