--- a/dev/01-templates/02-02-context-modes.html
+++ b/dev/01-templates/02-02-context-modes.html
@@ -33,6 +33,7 @@
 
     </head>
     <body>
+    <div id="body-container">
         <!-- Provide site root to javascript -->
         <script>
             var path_to_root = "../";
@@ -381,5 +382,6 @@ file.</p>
         <!-- Custom JS scripts -->
 
 
+    </div>
     </body>
 </html>
