--- a/dev/01-templates/02-05-names.html
+++ b/dev/01-templates/02-05-names.html
@@ -33,6 +33,7 @@
 
     </head>
     <body>
+    <div id="body-container">
         <!-- Provide site root to javascript -->
         <script>
             var path_to_root = "../";
@@ -314,5 +315,6 @@ use <code>names</code> see <a href="./06-03-names.html">Context Reference - Name
         <!-- Custom JS scripts -->
 
 
+    </div>
     </body>
 </html>
