--- a/dev/01-templates/03-partial-templates.html
+++ b/dev/01-templates/03-partial-templates.html
@@ -33,6 +33,7 @@
 
     </head>
     <body>
+    <div id="body-container">
         <!-- Provide site root to javascript -->
         <script>
             var path_to_root = "../";
@@ -243,5 +244,6 @@ limitations.</p>
         <!-- Custom JS scripts -->
 
 
+    </div>
     </body>
 </html>
