--- a/dev/01-templates/05-string-sanitization.html
+++ b/dev/01-templates/05-string-sanitization.html
@@ -33,6 +33,7 @@
 
     </head>
     <body>
+    <div id="body-container">
         <!-- Provide site root to javascript -->
         <script>
             var path_to_root = "../";
@@ -214,5 +215,6 @@ removed or replaced with an underscore <code>_</code>.</p>
         <!-- Custom JS scripts -->
 
 
+    </div>
     </body>
 </html>
