--- a/dev/01-templates/06-01-book.html
+++ b/dev/01-templates/06-01-book.html
@@ -33,6 +33,7 @@
 
     </head>
     <body>
+    <div id="body-container">
         <!-- Provide site root to javascript -->
         <script>
             var path_to_root = "../";
@@ -244,5 +245,6 @@ filter is used to format a <code>datetime</code> object into a human-readable da
         <!-- Custom JS scripts -->
 
 
+    </div>
     </body>
 </html>
