--- a/dev/01-templates/06-02-annotation.html
+++ b/dev/01-templates/06-02-annotation.html
@@ -33,6 +33,7 @@
 
     </head>
     <body>
+    <div id="body-container">
         <!-- Provide site root to javascript -->
         <script>
             var path_to_root = "../";
@@ -261,5 +262,6 @@ filter is used to join an array of items into a space-separated string.</p>
         <!-- Custom JS scripts -->
 
 
+    </div>
     </body>
 </html>
