--- a/dev/index.html
+++ b/dev/index.html
@@ -33,6 +33,7 @@
 
     </head>
     <body>
+    <div id="body-container">
         <!-- Provide site root to javascript -->
         <script>
             var path_to_root = "";
@@ -201,5 +202,6 @@ change.</p>
         <!-- Custom JS scripts -->
 
 
+    </div>
     </body>
 </html>
