--- a/dev/02-apple-books/02-02-archive-restore-library.html
+++ b/dev/02-apple-books/02-02-archive-restore-library.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>Archive Library - ReadStor</title>
+        <title>Archive/Restore Library - ReadStor</title>
 
 
         <!-- Custom HTML head -->
@@ -82,7 +82,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="../00-intro/00-intro.html"><strong aria-hidden="true">1.</strong> Introduction</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../00-intro/01-commands.html"><strong aria-hidden="true">1.1.</strong> Commands</a></li><li class="chapter-item expanded "><a href="../00-intro/02-00-options.html"><strong aria-hidden="true">1.2.</strong> Options</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../00-intro/02-01-global.html"><strong aria-hidden="true">1.2.1.</strong> Global</a></li><li class="chapter-item expanded "><a href="../00-intro/02-02-render.html"><strong aria-hidden="true">1.2.2.</strong> Render</a></li><li class="chapter-item expanded "><a href="../00-intro/02-03-export.html"><strong aria-hidden="true">1.2.3.</strong> Export</a></li><li class="chapter-item expanded "><a href="../00-intro/02-04-backup.html"><strong aria-hidden="true">1.2.4.</strong> Backup</a></li><li class="chapter-item expanded "><a href="../00-intro/02-05-filter.html"><strong aria-hidden="true">1.2.5.</strong> Filter</a></li><li class="chapter-item expanded "><a href="../00-intro/02-06-preprocess.html"><strong aria-hidden="true">1.2.6.</strong> Pre-process</a></li><li class="chapter-item expanded "><a href="../00-intro/02-07-postprocess.html"><strong aria-hidden="true">1.2.7.</strong> Post-process</a></li></ol></li></ol></li><li class="chapter-item expanded "><a href="../01-templates/00-templates.html"><strong aria-hidden="true">2.</strong> Templates</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../01-templates/01-an-example-template.html"><strong aria-hidden="true">2.1.</strong> An Example Template</a></li><li class="chapter-item expanded "><a href="../01-templates/02-00-configuration.html"><strong aria-hidden="true">2.2.</strong> Configuration</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../01-templates/02-01-template-groups.html"><strong aria-hidden="true">2.2.1.</strong> Template Groups</a></li><li class="chapter-item expanded "><a href="../01-templates/02-02-context-modes.html"><strong aria-hidden="true">2.2.2.</strong> Context Modes</a></li><li class="chapter-item expanded "><a href="../01-templates/02-03-structure-modes.html"><strong aria-hidden="true">2.2.3.</strong> Structure Modes</a></li><li class="chapter-item expanded "><a href="../01-templates/02-04-file-extensions.html"><strong aria-hidden="true">2.2.4.</strong> File Extensions</a></li><li class="chapter-item expanded "><a href="../01-templates/02-05-names.html"><strong aria-hidden="true">2.2.5.</strong> Names</a></li></ol></li><li class="chapter-item expanded "><a href="../01-templates/03-partial-templates.html"><strong aria-hidden="true">2.3.</strong> Partial Templates</a></li><li class="chapter-item expanded "><a href="../01-templates/04-backlinks.html"><strong aria-hidden="true">2.4.</strong> Backlinks</a></li><li class="chapter-item expanded "><a href="../01-templates/05-string-sanitization.html"><strong aria-hidden="true">2.5.</strong> String Sanitization</a></li><li class="chapter-item expanded "><a href="../01-templates/06-00-context-reference.html"><strong aria-hidden="true">2.6.</strong> Context Reference</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../01-templates/06-01-book.html"><strong aria-hidden="true">2.6.1.</strong> Book</a></li><li class="chapter-item expanded "><a href="../01-templates/06-02-annotation.html"><strong aria-hidden="true">2.6.2.</strong> Annotation</a></li><li class="chapter-item expanded "><a href="../01-templates/06-03-names.html"><strong aria-hidden="true">2.6.3.</strong> Names</a></li></ol></li></ol></li><li class="chapter-item expanded "><a href="../02-apple-books/00-apple-books.html"><strong aria-hidden="true">3.</strong> Apple Books</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../02-apple-books/01-archive-library.html" class="active"><strong aria-hidden="true">3.1.</strong> Archive Library</a></li><li class="chapter-item expanded "><a href="../02-apple-books/02-restore-library.html"><strong aria-hidden="true">3.2.</strong> Restore Library</a></li></ol></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="../00-intro/00-intro.html"><strong aria-hidden="true">1.</strong> Introduction</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../00-intro/01-commands.html"><strong aria-hidden="true">1.1.</strong> Commands</a></li><li class="chapter-item expanded "><a href="../00-intro/02-00-options.html"><strong aria-hidden="true">1.2.</strong> Options</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../00-intro/02-01-global.html"><strong aria-hidden="true">1.2.1.</strong> Global</a></li><li class="chapter-item expanded "><a href="../00-intro/02-02-render.html"><strong aria-hidden="true">1.2.2.</strong> Render</a></li><li class="chapter-item expanded "><a href="../00-intro/02-03-export.html"><strong aria-hidden="true">1.2.3.</strong> Export</a></li><li class="chapter-item expanded "><a href="../00-intro/02-04-backup.html"><strong aria-hidden="true">1.2.4.</strong> Backup</a></li><li class="chapter-item expanded "><a href="../00-intro/02-05-filter.html"><strong aria-hidden="true">1.2.5.</strong> Filter</a></li><li class="chapter-item expanded "><a href="../00-intro/02-06-preprocess.html"><strong aria-hidden="true">1.2.6.</strong> Pre-process</a></li><li class="chapter-item expanded "><a href="../00-intro/02-07-postprocess.html"><strong aria-hidden="true">1.2.7.</strong> Post-process</a></li></ol></li></ol></li><li class="chapter-item expanded "><a href="../01-templates/00-templates.html"><strong aria-hidden="true">2.</strong> Templates</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../01-templates/01-an-example-template.html"><strong aria-hidden="true">2.1.</strong> An Example Template</a></li><li class="chapter-item expanded "><a href="../01-templates/02-00-configuration.html"><strong aria-hidden="true">2.2.</strong> Configuration</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../01-templates/02-01-template-groups.html"><strong aria-hidden="true">2.2.1.</strong> Template Groups</a></li><li class="chapter-item expanded "><a href="../01-templates/02-02-context-modes.html"><strong aria-hidden="true">2.2.2.</strong> Context Modes</a></li><li class="chapter-item expanded "><a href="../01-templates/02-03-structure-modes.html"><strong aria-hidden="true">2.2.3.</strong> Structure Modes</a></li><li class="chapter-item expanded "><a href="../01-templates/02-04-file-extensions.html"><strong aria-hidden="true">2.2.4.</strong> File Extensions</a></li><li class="chapter-item expanded "><a href="../01-templates/02-05-names.html"><strong aria-hidden="true">2.2.5.</strong> Names</a></li></ol></li><li class="chapter-item expanded "><a href="../01-templates/03-partial-templates.html"><strong aria-hidden="true">2.3.</strong> Partial Templates</a></li><li class="chapter-item expanded "><a href="../01-templates/04-backlinks.html"><strong aria-hidden="true">2.4.</strong> Backlinks</a></li><li class="chapter-item expanded "><a href="../01-templates/05-string-sanitization.html"><strong aria-hidden="true">2.5.</strong> String Sanitization</a></li><li class="chapter-item expanded "><a href="../01-templates/06-00-context-reference.html"><strong aria-hidden="true">2.6.</strong> Context Reference</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../01-templates/06-01-book.html"><strong aria-hidden="true">2.6.1.</strong> Book</a></li><li class="chapter-item expanded "><a href="../01-templates/06-02-annotation.html"><strong aria-hidden="true">2.6.2.</strong> Annotation</a></li><li class="chapter-item expanded "><a href="../01-templates/06-03-names.html"><strong aria-hidden="true">2.6.3.</strong> Names</a></li></ol></li></ol></li><li class="chapter-item expanded "><a href="../02-apple-books/00-apple-books.html"><strong aria-hidden="true">3.</strong> Apple Books</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../02-apple-books/01-00-macos.html"><strong aria-hidden="true">3.1.</strong> macOS</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../02-apple-books/01-01-library-location.html"><strong aria-hidden="true">3.1.1.</strong> Library Location</a></li><li class="chapter-item expanded "><a href="../02-apple-books/01-02-archive-restore-library.html"><strong aria-hidden="true">3.1.2.</strong> Archive/Restore Library</a></li></ol></li><li class="chapter-item expanded "><a href="../02-apple-books/02-00-ios.html"><strong aria-hidden="true">3.2.</strong> iOS</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../02-apple-books/02-01-library-location.html"><strong aria-hidden="true">3.2.1.</strong> Library Location</a></li><li class="chapter-item expanded "><a href="../02-apple-books/02-01-access-library.html"><strong aria-hidden="true">3.2.2.</strong> Access Library</a></li><li class="chapter-item expanded "><a href="../02-apple-books/02-02-archive-restore-library.html" class="active"><strong aria-hidden="true">3.2.3.</strong> Archive/Restore Library</a></li></ol></li></ol></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -120,7 +120,7 @@
                         <a href="https://www.github.com/tnahs/readstor" title="Git repository" aria-label="Git repository">
                             <i id="git-repository-button" class="fa fa-github"></i>
                         </a>
-                        <a href="https://github.com/tnahs/readstor/edit/main/book/src/02-apple-books/01-archive-library.md" title="Suggest an edit" aria-label="Suggest an edit">
+                        <a href="https://github.com/tnahs/readstor/edit/main/book/src/02-apple-books/02-02-archive-restore-library.md" title="Suggest an edit" aria-label="Suggest an edit">
                             <i id="git-edit-button" class="fa fa-edit"></i>
                         </a>
 
@@ -149,73 +149,29 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="archive-library"><a class="header" href="#archive-library">Archive Library</a></h1>
+                        <h1 id="ios---archiverestore-library"><a class="header" href="#ios---archiverestore-library">iOS - Archive/Restore Library</a></h1>
+<p>Archiving and restoring iOS's Apple Books library is fairly straightforward. All
+the relevant data exists in a single folder. A simple drag/drop, copy/paste or
+zip/unzip should suffice.</p>
 <blockquote>
-<p><i class="fa fa-info-circle"></i> The following snippet is taken from
-<a href="https://github.com/tnahs/readstor/tree/main/scripts/apple-books/archive.sh">scripts/apple-books/archive.sh</a>.</p>
+<p><i class="fa fa-exclamation-circle"></i> When restoring a library make sure
+that the current version of iOS and the version the archive was created from
+are identical. Not doing so could lead to unexpected results.</p>
 </blockquote>
-<p>Archiving the library is as simple as running two <code>rsync</code> commands. This should
-save all the relevant Apple Books data and metadata to a single directory. Make
-sure to replace <code>[PATH-TO-ARCHIVE]</code> with a valid path to said directory.</p>
-<pre><code class="language-shell">rsync \
-    --archive \
-    --extended-attributes \
-    $HOME/Library/Containers/com.apple.BK* \
-    $HOME/Library/Containers/com.apple.iBooks* \
-    [PATH-TO-ARCHIVE]/Containers
-
-rsync \
-    --archive \
-    --extended-attributes \
-    $HOME/Library/Group\ Containers/group.com.apple.iBooks \
-    [PATH-TO-ARCHIVE]/Group\ Containers
-</code></pre>
-<p>For example, if <code>[PATH-TO-ARCHIVE]</code> is:</p>
-<pre><code class="language-plaintext">~/archives/2022-10-08--apple-books-v4.4-5177--macos-v12.6
-</code></pre>
-<p>Our <code>rsync</code> commands would be:</p>
-<pre><code class="language-shell">rsync \
-    --archive \
-    --extended-attributes \
-    $HOME/Library/Containers/com.apple.BK* \
-    $HOME/Library/Containers/com.apple.iBooks* \
-    ~/archives/2022-10-08--apple-books-v4.4-5177--macos-v12.6/Containers
-
-rsync \
-    --archive \
-    --extended-attributes \
-    $HOME/Library/Group\ Containers/group.com.apple.iBooks \
-    ~/archives/2022-10-08--apple-books-v4.4-5177--macos-v12.6/Group\ Containers
-</code></pre>
-<p>And the resulting archive would resemble:</p>
-<pre><code class="language-plaintext">~/archives
-  └── 2022-10-08--apple-books-v4.4-5177--macos-v12.6
-      ├── Containers
-      │   ├── com.apple.BKAgentService
-      │   ├── com.apple.iBooks.BooksNotificationContentExtension
-      │   ├── com.apple.iBooks.engagementExtension
-      │   ├── com.apple.iBooks.iBooksSpotlightExtension
-      │   ├── com.apple.iBooksX
-      │   ├── com.apple.iBooksX-SecureUserDefaults
-      │   ├── com.apple.iBooksX.BooksThumbnail
-      │   ├── com.apple.iBooksX.CacheDelete
-      │   ├── com.apple.iBooksX.DiskSpaceEfficiency
-      │   └── com.apple.iBooksX.SharingExtension
-      └── Group Containers
-          └── group.com.apple.iBooks
-</code></pre>
+<blockquote>
+<p><i class="fa fa-info-circle"></i> See
+<a href="../02-apple-books/02-01-library-location.html">iOS - Library Location</a> and
+<a href="../02-apple-books/02-01-access-library.html">iOS - Access Library</a> for more information.</p>
+</blockquote>
 
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
-                            <a rel="prev" href="../02-apple-books/00-apple-books.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                            <a rel="prev" href="../02-apple-books/02-01-access-library.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                                 <i class="fa fa-angle-left"></i>
                             </a>
 
-                            <a rel="next" href="../02-apple-books/02-restore-library.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
-                                <i class="fa fa-angle-right"></i>
-                            </a>
 
                         <div style="clear: both"></div>
                     </nav>
@@ -223,13 +179,10 @@ rsync \
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
-                    <a rel="prev" href="../02-apple-books/00-apple-books.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                    <a rel="prev" href="../02-apple-books/02-01-access-library.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                         <i class="fa fa-angle-left"></i>
                     </a>
 
-                    <a rel="next" href="../02-apple-books/02-restore-library.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
-                        <i class="fa fa-angle-right"></i>
-                    </a>
             </nav>
 
         </div>
